Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,9 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar
                 las cosas increibles que se pueden hacer con ramas
             </p>
+            <p>este es un nuevo parrafo que va a ser la informacion que usted 
+                va a ver dentro del cuado del blog.
+            </p>
         </div>
     </div>
 </body>
