agregue suscripcion, cambie la cebcera maestra y la puse toda azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
 
         <div id="post">
@@ -23,6 +23,7 @@
             <p>este es un nuevo parrafo que va a ser la informacion que usted 
                 va a ver dentro del cuado del blog.
             </p>
+            <p>Sucribete y dale like</p>
         </div>
     </div>
 </body>
