--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Titulo del post</title>
+    <title>Bienvenido a Hyperblog 2.0</title>
     <link rel='stylesheet' href='css/estilos.css'>
 </head>
 
